force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Account_Number__c</fullName>
    <label>Bank_Account_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>