force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Address_1__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Address_1__c</fullName>
    <label>Bank_Address_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>