force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Address_3__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Address_3__c</fullName>
    <label>Bank_Address_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>