force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Branch_Code__c</fullName>
    <label>Bank_Branch_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>