force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_City__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_City__c</fullName>
    <label>Bank_City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>