force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Postal_Code__c</fullName>
    <label>Bank_Postal_Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>