force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Bank_Province__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bank_Province__c</fullName>
    <label>Bank_Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>