force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Default__c.field-meta.xml
<CustomField>
    <fullName>QTB_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>