force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>