force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>QTB_Payment_Method__c</fullName>
    <label>Payment_Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>