force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Payment_Notification__c.field-meta.xml
<CustomField>
    <fullName>QTB_Payment_Notification__c</fullName>
    <label>Payment_Notification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>