force-app/main/default/objects/QTB_Bank_Detail__c/fields/QTB_Transit_Id__c.field-meta.xml
<CustomField>
    <fullName>QTB_Transit_Id__c</fullName>
    <label>Transit_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>