force-app/main/default/objects/QTB_Bank_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Payment_Method__c</columns>
    <columns>QTB_Legal_Entity__c</columns>
    <columns>QTB_Bank_Country__c</columns>
    <columns>QTB_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>